--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://naokieto.github.io/reactjs_experimental/",
+  "homepage": "https://naokieto.github.io/arithmeticGame/",
   "dependencies": {
     "gh-pages": "^1.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "0.9.5"
   },
   "devDependencies": {},
